overflow body fix

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -11,6 +11,9 @@ $primary: $spaceout-blue
 $primary-invert: $spaceout-invert
 $text-color: #4e4a4a
 
+.body 
+  overflow-x: hidden
+
 .hero.is-info 
 	background-color: #fff !important
 	color: $text-color !important
